examples/negative/pub_enforcement/violation_prelude/secret_lib.kai
# Negative fixture (#511): a non-`pub` fn surfaced via `--prelude`
# must be rejected with the private-to-module diagnostic.

fn main() : Unit / Console {
  print(int_to_string(visible()))
  print(int_to_string(secret()))
}
